# Personal-Rust-Learning

./: .gitignore  README.md
core-memory-concepts/: Cargo.toml
core-memory-concepts/src/: main.rs
enums_pattern_matching/src/: main.rs
football_analytics/: Cargo.toml
football_analytics/src/: analytics.rs  main.rs  match_data.rs  player.rs  team.rs
guessing_game/src/: main.rs
guessing_game/tests/: main_test.rs
house_party_inventory/: Cargo.toml
house_party_inventory/src/: inventory.rs  main.rs
house_party_inventory/src/utils/: formatter.rs
structs_data_analysis/: Cargo.toml
structs_data_analysis/src/: main.rs
